--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -42,7 +42,7 @@
         android:text=""
         android:textSize="22sp"/>
     <Button
-        android:id="@+id/ok_button"
+        android:id="@+id/btn_ok"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
