--- a/app/src/main/res/xml/content_detail_scene.xml
+++ b/app/src/main/res/xml/content_detail_scene.xml
@@ -54,7 +54,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/status" />
 
-        <Constraint android:id="@+id/ok_button"
+        <Constraint android:id="@+id/btn_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
             app:layout_constraintStart_toEndOf="@+id/status_title"
             app:layout_constraintTop_toBottomOf="@+id/file_name" />
 
-        <Constraint android:id="@+id/ok_button"
+        <Constraint android:id="@+id/btn_ok"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
